# thrust

./: .gitignore  .gitmodules  AGENT_PROMPT.md  CI_SETUP.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  MULTI_AGENT_DESIGN.md  Makefile  PROJECT_STATUS.md  PUFFERLIB_IMPLEMENTATION_GUIDE.md  README.md  ROADMAP.md  SETUP_COMPLETE.md  VERSIONS.md  WASM_ROADMAP.md  WORKPLAN.md  cartpole_model.pt  cartpole_model_best.json  cartpole_model_best.pt  cartpole_model_hybrid.json  cartpole_model_hybrid.pt  cartpole_model_modern.json  cartpole_model_modern.pt  cartpole_model_sb3.json  cartpole_model_sb3.pt  cartpole_optimization_results.json  clippy.toml  pufferlib_buffer_analysis.md  rustfmt.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: ci.yml  deploy-pages.yml
docs/: ARCHITECTURE_PROPOSAL.md  GETTING_STARTED.md  GPU_SETUP.md  GPU_TRAINING_GUIDE.md  LIBTORCH_SETUP.md  PPO_BEST_PRACTICES.md  REMOTE_TRAINING.md  RESEARCH_PAPERS.md  TCH_RS_STATUS.md  TRAINING_CARTPOLE.md  TRAINING_SIMPLEBANDIT.md  TRAINING_SNAKE.md  UNIVERSAL_INFERENCE.md
docs/archive/: PUFFERLIB_ANALYSIS_INDEX.md  README.md  SEARCH_SUMMARY.md
examples/: debug_cartpole.rs  debug_training.rs  export_model.rs  export_snake_init.rs  export_snake_model.rs  optimize_cartpole.rs  optimize_snake.rs  test_cuda.rs  train_cartpole.rs  train_cartpole_best.rs  train_cartpole_hybrid.rs  train_cartpole_long.rs  train_cartpole_modern.rs  train_cartpole_sb3.rs  train_simple_bandit.rs  train_snake.rs  train_snake_multi.rs  train_snake_multi_v2.rs
examples/games/bandit/: train_simple_bandit.rs
examples/games/cartpole/: debug_cartpole.rs  optimize_cartpole.rs  test_inference.rs  test_json_inference.rs  train_cartpole_hybrid.rs  train_cartpole_sb3.rs
examples/games/snake/: export_snake_init.rs  export_snake_model.rs  train_snake.rs  train_snake_multi_v2.rs
models/: README.md  cartpole_model_long.pt
models/policies/cartpole/: cartpole_model_best.pt
scripts/: README.md  check-optimization.sh  check.sh  export_pytorch_model.py  gpu-build.sh  gpu-optimize-snake.sh  gpu-optimize.sh  gpu-status.sh  gpu-train.sh  parallel_cartpole_training.sh  remote-build.sh  remote-logs.sh  remote-optimize.sh  remote-status.sh  remote-stop.sh  remote-train.sh  run-optimization.sh  setup-libtorch.sh  test.sh  train-cpu.sh  train-gpu.sh  train-snake-remote.sh  train.sh
src/: lib.rs  wasm.rs
src/buffer/: mod.rs  rollout.rs
src/buffer/rollout/: gae.rs  sampling.rs  storage.rs  tests.rs
src/env/: cartpole.rs  mod.rs  pool.rs  simple_bandit.rs  snake.rs
src/env/games/: mod.rs  simple_bandit.rs  snake.rs
src/env/snake/: environment.rs  multi_agent.rs  snake.rs  types.rs
src/inference/: mod.rs  nn.rs  snake.rs  weights.rs
src/multi_agent/: environment.rs  learner.rs  matchmaking.rs  messages.rs  mod.rs  population.rs  simulator.rs
src/optimize/: bayesian.rs  mod.rs  pareto.rs  scheduler.rs  space.rs  trial.rs
src/policy/: inference.rs  mlp.rs  mod.rs  snake_cnn.rs  universal_inference.rs
src/train/: mod.rs  ppo.rs
src/utils/: mod.rs  normalize.rs
tests/: integration_train_export_inference.rs  test_ppo_learning.rs
web/: IMPLEMENTATION_PLAN.md  README.md  TESTING.md  biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
web-old/: README.md  cartpole.html  cartpole.js  index.html  snake.html  snake.js  thrust_rl.js
web/public/: 404.html  cartpole_model.json  cartpole_model_best.json  thrust_rl.js  thrust_rl_bg.wasm  wasm-loader.js
web/src/: App.tsx  vite-env.d.ts
web/tests/: basic.spec.ts  cartpole-bigint-error.spec.ts  cartpole.spec.ts  debug-games.spec.ts  production.spec.ts  site-loads.spec.ts  snake-bigint-error.spec.ts  snake-gameplay.spec.ts  snake.spec.ts
(+24 files in other folders)
