[package]
name = "thrust-rl"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "High-performance reinforcement learning in Rust + CUDA"
repository = "https://github.com/yourusername/thrust"
keywords = ["reinforcement-learning", "machine-learning", "rl", "deep-learning", "cuda"]
categories = ["science", "algorithms"]
readme = "README.md"

[dependencies]
# PyTorch bindings for neural networks
# Using tch-rs 0.22 with PyTorch 2.9 (requires nightly Rust + edition 2024)
tch = "0.22"

# Async runtime for vectorization
tokio = { version = "1", features = ["full", "rt-multi-thread"] }

# Data parallelism
rayon = "1.8"

# Zero-copy operations
bytemuck = { version = "1.14", features = ["derive"] }

# Serialization for checkpoints
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Metrics and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random number generation
rand = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

# [[bench]]
# name = "benchmarks"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
