[package]
name = "thrust-rl"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "High-performance reinforcement learning in Rust + CUDA"
repository = "https://github.com/yourusername/thrust"
keywords = ["reinforcement-learning", "machine-learning", "rl", "deep-learning", "cuda"]
categories = ["science", "algorithms"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyTorch bindings for neural networks (optional for WASM builds)
# Using tch-rs 0.22 with PyTorch 2.9 (requires nightly Rust + edition 2024)
tch = { version = "0.22", optional = true }

# Async runtime for vectorization (not available in WASM)
tokio = { version = "1", features = ["full", "rt-multi-thread"], optional = true }

# Data parallelism (not available in WASM)
rayon = { version = "1.8", optional = true }

# Zero-copy operations
bytemuck = { version = "1.14", features = ["derive"] }

# Serialization for checkpoints
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "1.3", optional = true }

# Metrics and logging (simplified for WASM)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Random number generation
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }

# Multi-threading and channels (not available in WASM)
crossbeam-channel = { version = "0.5", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time utilities (optional for training metadata)
chrono = { version = "0.4", optional = true }

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["training"]
training = ["tch", "tokio", "rayon", "bincode", "tracing", "tracing-subscriber", "crossbeam-channel", "chrono"]  # Include PyTorch and async deps for training
wasm = ["wasm-bindgen", "web-sys", "js-sys", "console_error_panic_hook"]  # Pure Rust for WASM

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

# [[bench]]
# name = "benchmarks"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
